--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,18 @@
             "email": "sd@seandezoysa.com"
         }
     ],
-    "require": {}
+    "require": {
+        "codeception/mockery-module": "^0.3.0",
+        "symfony/http-foundation": "^4.3"
+    },
+    "require-dev": {
+        "lucatume/wp-browser": "^2.2",
+        "mockery/mockery": "^1.2",
+        "php-mock/php-mock-mockery": "^1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Db\\" : "classes/Db"
+        }
+    }
 }
