--- a/package.json
+++ b/package.json
@@ -4,9 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open --inline",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "jest": "^24.8.0",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-php-loader": "^0.5.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.1.3",
+    "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
+    "history": "^4.9.0",
+    "lodash": "^4.17.11",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "save-dev": "^2.0.0",
+    "styled-components": "^4.3.2",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
