--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv-webpack": "^1.7.0",
     "history": "^4.9.0",
     "lodash": "^4.17.11",
+    "material-ui-number-input": "^5.0.24",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
