--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "jest": "^24.8.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
@@ -25,6 +27,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "history": "^4.9.0",
