--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-async-to-generator": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.5",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "jest": "^24.8.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
@@ -28,6 +33,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
+    "babel-plugin-transform-async-to-promises": "^0.8.12",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "history": "^4.9.0",
