--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "codeception/mockery-module": "^0.3.0",
-        "symfony/http-foundation": "^4.3"
+        "symfony/http-foundation": "^4.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "lucatume/wp-browser": "^2.2",
