--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "codeception/mockery-module": "^0.3.0",
         "symfony/http-foundation": "^4.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "vlucas/phpdotenv": "^3.4"
     },
     "require-dev": {
         "lucatume/wp-browser": "^2.2",
