--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require-dev": {
         "lucatume/wp-browser": "^2.2",
         "mockery/mockery": "^1.2",
-        "php-mock/php-mock-mockery": "^1.3"
+        "php-mock/php-mock-mockery": "^1.3",
+        "phpunit/phpunit": "^8.2"
     },
     "autoload": {
         "psr-4": {
