--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "lucatume/wp-browser": "^2.2",
         "mockery/mockery": "^1.2",
         "php-mock/php-mock-mockery": "^1.3",
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2",
+        "greenlion/php-sql-parser": "^4.3"
     },
     "autoload": {
         "psr-4": {
