--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "history": "^4.9.0",
     "lodash": "^4.17.14",
     "material-ui-number-input": "^5.0.24",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
