fix data loader script, add 19 records to coupons table

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 ROOT_DOMAIN=localhost
 
+SQL_DSN=mysql:host=localhost;dbname=wptest2
 SQL_USER=wpadmin
 SQL_PW=1234
 SQL_DB=wptest2
