--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^3.2.0",
     "jest": "^24.8.0",
+    "style-loader": "^1.0.0",
     "watch": "^1.0.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
