add pagination ui

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 ROOT_DOMAIN=localhost
-REACT_APP_DEV_API_BASE=http://localhost/wptest2/index.php/wp-json/
+REACT_APP_DEV_API_BASE=http://localhost/wptest2/index.php/wp-json
 
 SQL_DSN=mysql:host=localhost;dbname=wptest2
 SQL_USER=wpadmin
