--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 NODE_ENV=development
 ROOT_DOMAIN=localhost
-REACT_APP_DEV_API_BASE=http://localhost/wptest2/index.php/wp-json
+REACT_APP_DEV_API_BASE=http://localhost/wptest2/wp-json
 
 SQL_DSN=mysql:host=localhost;dbname=wptest2
 SQL_USER=wpadmin
 SQL_PW=1234
 SQL_DB=wptest2
+
+REACT_APP_WP_USER=adm
+REACT_APP_WP_PASSWORD=1234
