--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.2.0",
+    "fetch-mock": "^7.4.0",
     "jest": "^24.8.0",
+    "node-fetch": "^2.6.0",
     "style-loader": "^1.0.0",
     "watch": "^1.0.2",
     "webpack": "^4.35.3",
@@ -39,7 +41,7 @@
     "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "babel-plugin-transform-async-to-promises": "^0.8.12",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
     "history": "^4.9.0",
     "js-cookie": "^2.2.1",
